[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
pcap = "0.10.1"
libc = "*"
chrono = "0.4"
prettytable-rs = "^0.9"
clap = { version = "3.1.6", features = ["derive"] }